// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComicsDetails should not render hidden on mobile 1`] = `
<article
  className="details"
>
  <div
    className="close-details hidden-on-gt-mobile"
    onClick={[MockFunction]}
  >
    close
  </div>
  <p
    className="detail-title"
  >
    Superman
  </p>
  <div
    className="detail-cover-text-container"
  >
    <div
      className="detail-cover"
    >
      <img
        alt="Superman"
        className=""
        src="cover.png"
      />
    </div>
    <div
      className="detail-text"
    >
      <ComicDetailsCharacters />
      <ComicDetailsCreators />
      <b>
        Release:
      </b>
       
    </div>
  </div>
  <a
    className=" primary-button"
    rel="noopener noreferrer"
    target="_blank"
  >
    Buy this issue for 
  </a>
</article>
`;

exports[`ComicsDetails should render hidden on mobile 1`] = `
<article
  className="details hidden-on-mobile"
>
  <div
    className="close-details hidden-on-gt-mobile"
    onClick={[MockFunction]}
  >
    close
  </div>
  <p
    className="detail-title"
  >
    Superman
  </p>
  <div
    className="detail-cover-text-container"
  >
    <div
      className="detail-cover"
    >
      <img
        alt="Superman"
        className=""
        src="cover.png"
      />
    </div>
    <div
      className="detail-text"
    >
      <ComicDetailsCharacters />
      <ComicDetailsCreators />
      <b>
        Release:
      </b>
       
    </div>
  </div>
  <a
    className=" primary-button"
    rel="noopener noreferrer"
    target="_blank"
  >
    Buy this issue for 
  </a>
</article>
`;
